# template

./: README.md  pyproject.toml  pytest.sh  requirements.txt
.github/workflows/: docker-publish.yml  publish-package.yml  test-and-lint.yml
doc/: conf.py  getting_started.rst
src/: chem.py
test/: test_chem.py
